--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -146,6 +146,11 @@ html {
 	scroll-behavior: smooth;
 }
 
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--border) transparent;
+}
+
 @keyframes blur {
 	to {
 		/* @apply bg-background/80 py-2 shadow-md backdrop-blur-md; */
