--- a/src/layouts/blog.astro
+++ b/src/layouts/blog.astro
@@ -2,6 +2,12 @@
 import MainLayout from '@layouts/layout.astro';
 import { TOC, TOCPopover } from '@/components/blog/toc-side';
 import type { CollectionEntry } from 'astro:content';
+import { mdxComponents } from '@components/mdx/mdx-component';
+import { Badge } from '@ui/badge';
+import { Button } from '@ui/button';
+import { ArrowLeft, Calendar, Tag } from 'lucide-react';
+import Code from '@components/mdx/code.astro';
+import File from '@components/mdx/file.astro';
 
 interface Props {
   post: CollectionEntry<'posts'>;
@@ -12,7 +18,7 @@ interface Props {
   }[];
 }
 const { post, toc } = Astro.props;
-
+const { slug } = post.data;
 ---
 
 <MainLayout
@@ -22,14 +28,48 @@ const { post, toc } = Astro.props;
   }}
 >
   <div class='container mx-auto px-4 py-20 gap-12 lg:flex relative'>
-
-    {/* Main content with spacing for TOC */}
-    <div class='lg:pr-[25%] w-full pt-[1/4]'>  <!-- Added padding for TOC space -->
-      <slot />
+    <div class='mx-auto'>  <!-- Added padding for TOC space -->
+      <div class='mx-auto max-w-3xl relative'>
+        <div class='flex-col gap-6 space-y-4 mb-5'>
+          <Button asChild variant='ghost'>
+            <a class='flex items-baseline' href='/blog'>
+              <ArrowLeft className='mr-2 h-4 w-4 text-primary' />
+              <span class='hidden sm:block'>Back to all posts</span>
+            </a>
+          </Button>
+          <h1
+            class='font-bold text-3xl tracking-tight sm:text-4xl scroll-m-28'
+            transition:name={`blog-title-${slug}`}
+            id={post.data.slug}
+          >
+            {post.data.title}
+          </h1>
+          <div class='flex flex-wrap gap-4 text-muted-foreground'>
+            <div class='flex items-center' transition:name={`blog-date-${slug}`}>
+              <Calendar className='mr-2 h-4 w-4 text-primary' />
+              {post.data.date}
+            </div>
+            <div
+              class='flex items-center'
+              transition:name={`blog-category-${slug}`}
+            >
+              <Tag className='mr-2 h-4 w-4 text-primary' />
+              <Badge variant='outline' className='border border-primary'>
+                {post.data.category}
+              </Badge>
+            </div>
+          </div>
+        </div>
+        <div class='block lg:hidden fixed right-4 top-15 w-full h-[calc(100vh)] overflow-y-auto z-10'>
+          <TOCPopover toc={toc} client:only path={post.data.title} />
+        </div>
+        {/* Slot */}
+        <slot />
+        {/* Slot */}
+      </div>
     </div>
     
-    {/* Desktop TOC */}
-    <div class='hidden lg:block fixed right-4 top-20 w-1/4 h-[calc(100vh-10rem)] overflow-y-auto'>
+    <div class='hidden lg:block sticky right-4 top-20 w-1/4 h-[calc(100vh)] overflow-y-auto'>
       <TOC toc={toc} client:load />
     </div>
   </div>
