--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,9 +1,6 @@
 ---
 import { getEntry, render } from 'astro:content';
 import { mdxComponents } from '@components/mdx/mdx-component';
-import { Badge } from '@ui/badge';
-import { Button } from '@ui/button';
-import { ArrowLeft, Calendar, Tag } from 'lucide-react';
 import Code from '@components/mdx/code.astro';
 import File from '@components/mdx/file.astro';
 import BlogLayout from '@layouts/blog.astro';
@@ -35,46 +32,13 @@ const toc = [
 ---
 
 <BlogLayout post={post} toc={toc}>
-  <div class='mx-auto max-w-3xl'>
-    <div class='flex-col gap-6 space-y-4 mb-5'>
-      <Button asChild variant='ghost'>
-        <a class='flex items-baseline' href='/blog'>
-          <ArrowLeft className='mr-2 h-4 w-4 text-primary' />
-          <span class='hidden sm:block'>Back to all posts</span>
-        </a>
-      </Button>
-
-      <h1
-        class='font-bold text-3xl tracking-tight sm:text-4xl scroll-m-28'
-        transition:name={`blog-title-${slug}`}
-        id={post.data.slug}
-      >
-        {post.data.title}
-      </h1>
-      <div class='flex flex-wrap gap-4 text-muted-foreground'>
-        <div class='flex items-center' transition:name={`blog-date-${slug}`}>
-          <Calendar className='mr-2 h-4 w-4 text-primary' />
-          {post.data.date}
-        </div>
-        <div
-          class='flex items-center'
-          transition:name={`blog-category-${slug}`}
-        >
-          <Tag className='mr-2 h-4 w-4 text-primary' />
-          <Badge variant='outline' className='border border-primary'>
-            {post.data.category}
-          </Badge>
-        </div>
-      </div>
-    </div>
-    <article transition:name={`blog-content-${slug}`}>
-      <Content
-        components={{
-          ...mdxComponents,
-          pre: Code,
-          FileTree: File,
-        }}
-      />
-    </article>
-  </div>
+  <article transition:name={`blog-content-${slug}`} class="prose dark:prose-invert max-w-none">
+    <Content
+      components={{
+        ...mdxComponents,
+        pre: Code,
+        FileTree: File,
+      }}
+    />
+  </article>
 </BlogLayout>
