refactor: update contact and blog components to use client:visible for improved rendering

--- a/src/components/sections/contact.astro
+++ b/src/components/sections/contact.astro
@@ -98,5 +98,5 @@ import { AnimatedSection } from './section';
         </div>
       </CardContent>
     </Card>
-    <ContactForm client:idle />
+    <ContactForm client:visible />
 </AnimatedSection>
