--- a/src/components/pages/navbar.astro
+++ b/src/components/pages/navbar.astro
@@ -24,7 +24,7 @@ const navLinks = [
       Angel Lopez
     </a>
 
-    <NavbarClient navLinks={navLinks} client:idle />
+    <NavbarClient navLinks={navLinks} client:visible />
 
     {/* Desktop Navbar */}
     <div class='hidden items-center gap-6 md:flex'>
